<resources>
    <string name="app_name">My Application</string>
    <string name="nombre">Nombre</string>
    <string name="cuenta">Num.Cuenta</string>
    <string name="insertar">Insertar</string>
    <string name="salir">Salir</string>
    <string name="tamaño">Tamaño de letra</string>
    <string name="empleado">Empleado</string>
    <string name="empleados">Empleados</string>
    <string name="sucursales">Sucursales</string>
    <string name="ventas">Ventas</string>
    <string name="producto">Producto</string>
    <string name="productos">Productos financieros</string>
    <string name="codEmp">Cod.Empleado</string>
    <string name="codigoEmp">Código del empleado</string>
    <string name="codPro">Cod.Producto</string>
    <string name="codigoPro">Código del producto</string>
    <string name="contraseña">Contraseña</string>
    <string name="trabajar">¿Con qué desea trabajar?</string>
    <string name="guardar">Guardar</string>
    <string name="interes">Interes</string>
    <string name="numCuenta">Número de cuenta</string>
    <string name="ahorro">Ahorro</string>
    <string name="fecha">Fecha</string>
    <string name="fechaDev">Fecha"\n"Devolución</string>
    <string name="fechaVent">Fecha venta</string>
    <string name="direccion">Dirección</string>
    <string name="cantidad">Cantidad</string>
    <string name="peticion">Error en petición</string>
    <string name="respuesta">Error en respuesta</string>
    <string name="cliEnVenta">El cliente participa en una venta,no se puede borrar</string>
    <string name="empEnVenta">El empleado participa en una venta,no se puede borrar</string>
    <string name="proEnVenta">El producto participa en una venta,no se puede borrar</string>
    <string name="cliExiste">El cliente ya existe</string>
    <string name="cliNoExiste">El cliente no existe</string>
    <string name="empExiste">El empleado ya existe</string>
    <string name="usuExiste">El usuario ya existe</string>
    <string name="empNoExiste">El empleado no existe</string>
    <string name="prestExiste">El préstamo ya existe</string>
    <string name="prestNoExiste">El préstamo no existe</string>
    <string name="proExiste">El producto ya existe</string>
    <string name="proNoExiste">El producto no existe</string>
    <string name="sucExiste">La sucursal ya existe</string>
    <string name="sucNoExiste">La sucursal no existe</string>
    <string name="vendExiste">La venta ya existe</string>
    <string name="vendNoExiste">La venta no existe</string>
    <string name="sucRecNoExiste">La sucursal que recibe el prestamo no existe</string>
    <string name="sucReaExiste">La sucursal que realiza el prestamo no existe</string>
    <string name="sucEnPrest">La sucursal realiza o recibe un prestamo,no se puede borrar</string>
    <string name="ins">Insertado correctamente</string>
    <string name="NoInsResp">No insertado,error en respuesta</string>
    <string name="NoInsPet">No insertado,error en petición</string>
    <string name="mod">Modificado correctamente</string>
    <string name="NoModResp">No modificado,error en respuesta</string>
    <string name="NoModPet">No modificado,error en petición</string>
    <string name="borrar">Borrado correctamente</string>
    <string name="NoBorrarResp">No borrado,error en respuesta</string>
    <string name="NoBorrarPet">No borrado,error en petición</string>
    <string name="conexion">Conexión del servidor</string>
    <string name="intCodigo">Tiene que introducir el código</string>
    <string name="intNombre">Tiene que introducir el nombre</string>
    <string name="intDni">Tiene que introducir el dni</string>
    <string name="intDniForm">"Formato de DNI incorrecto"</string>
    <string name="intTlf">Tiene que introducir el teléfono</string>
    <string name="intTlfForm">"Formato de teléfono incorrecto"</string>
    <string name="intCuenta">Tiene que introducir el número de cuenta</string>
    <string name="intCuentaForm">"Formato de número de cuenta incorrecto"</string>
    <string name="intNombreNum">El nombre no puede tener números</string>
    <string name="intContra">Tiene que introducir la contraseña</string>
    <string name="intUser">Tiene que introducir el usuario</string>
    <string name="intURL">Tiene que introducir la URL</string>
    <string name="uriInc">Formato de uri incorrecto</string>
    <string name="userInc">Usuario o contraseña incorrectos</string>
    <string name="prefGuar">Preferencias guardadas correctamente</string>
    <string name="accSuc">Solo los directores pueden acceder a las sucursales</string>
    <string name="accEmp">Solo los directores pueden acceder a los empleados</string>
    <string name="accCli">Solo los directores pueden borrar clientes</string>
    <string name="accPrest">Solo los directores pueden acceder a los préstamos</string>
    <string name="intCodigoCli">Formato de código incorrecto(Formato válido:c+tres dígitos)</string>
    <string name="intCodigoEmp">Formato de código incorrecto(Formato válido:e+dos dígitos)</string>
    <string name="intCodigoSuc">"Formato de código incorrecto(Formato válido:s+dos dígitos</string>
    <string name="intCodigoPro">Formato de código incorrecto(Formato válido:p+dos dígitos)</string>
    <string name="intCodigoSucR">Tiene que introducir el código de la sucursal que recibe el prestamo</string>
    <string name="intCodigoSucP">Tiene que introducir el código de la sucursal que realiza el prestamo</string>
    <string name="intCodigoSucRForm">Formato de código de la sucursal que recibe el prestamo incorrecto(Formato válido:s+dos dígitos</string>
    <string name="intCodigoSucPForm">Formato de código de la sucursal que realiza el prestamo incorrecto(Formato válido:s+dos dígitos</string>
    <string name="intCant">Tiene que introducir la cantidad</string>
    <string name="intCantForm">La cantidad solo pueden ser números</string>
    <string name="intInt">Tiene que introducir el interés</string>
    <string name="intDir">Tiene que introducir la dirección</string>
    <string name="intIntForm">El intéres solo pueden ser números</string>
    <string name="intPunt">Tiene que introducir la puntuación</string>
    <string name="intPuntForm">Formato de puntuación incorrecto(Formato correcto:tres letras)</string>
    <string name="intCodigoProducto">Tiene que introducir el código de producto</string>
    <string name="intCodigoEmpleado">Tiene que introducir el código de la sucursal que recibe el prestamo</string>
    <string name="intCodigoCliente">Tiene que introducir el código de la sucursal que recibe el prestamo</string>
    <string name="intFechaVent">Tiene que introducir la fecha de venta</string>
    <string name="intFechaDev">Tiene que introducir la fecha de devolución</string>
    <string name="intFechaForm">Formato de fecha incorrecto(Formato correcto:yyyy-mm-dd)</string>

</resources>