<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cliente">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnVisualizarCli"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="57dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="52dp"
            android:text="Visualizar"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnBorrarCli" />

        <Button
            android:id="@+id/btnInsCli"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="96dp"
            android:layout_marginEnd="12dp"
            android:text="@string/insertar"
            android:textSize="16dp"
            app:layout_constraintEnd_toStartOf="@+id/btnModCli"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6Cli" />

        <Button
            android:id="@+id/btnSalirCli"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="110dp"
            android:layout_height="57dp"
            android:layout_marginStart="76dp"
            android:layout_marginTop="20dp"
            android:text="@string/salir"
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnInsCli" />

        <Button
            android:id="@+id/btnBorrarCli"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="57dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="84dp"
            android:layout_marginEnd="4dp"
            android:text="Borrar"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnModCli"
            app:layout_constraintTop_toBottomOf="@+id/txtCuentaCli" />

        <Button
            android:id="@+id/btnModCli"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="84dp"
            android:text="Modificar"
            android:textSize="16dp"
            app:layout_constraintStart_toEndOf="@+id/btnInsCli"
            app:layout_constraintTop_toBottomOf="@+id/txtCuentaCli" />

        <TextView
            android:id="@+id/textViewCli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:text="Cod.Cliente"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tituloCLi" />

        <TextView
            android:id="@+id/textView2Cli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:text="Dni"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCli" />

        <TextView
            android:id="@+id/tituloCLi"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="#A65CE6"
            android:backgroundTint="#C473F6"
            android:text="Cliente"
            android:textAlignment="center"
            android:textColor="#131313"
            android:textColorLink="#3F51B5"
            android:textSize="35sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtCodCli"
            android:layout_width="214dp"
            android:layout_height="57dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="28dp"
            android:hint="Código cliente"
            android:text="c129"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tituloCLi" />

        <EditText
            android:id="@+id/txtDniCli"
            android:layout_width="214dp"
            android:layout_height="57dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="28dp"
            android:hint="DNI"
            android:text="55555555N"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCodCli" />

        <EditText
            android:id="@+id/txtNombreCli"
            android:layout_width="214dp"
            android:layout_height="57dp"
            android:layout_marginTop="41dp"
            android:layout_marginEnd="28dp"
            android:hint="@string/nombre"
            android:text="nombre"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDniCli" />

        <EditText
            android:id="@+id/txtCuentaCli"
            android:layout_width="214dp"
            android:layout_height="57dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="28dp"
            android:hint="@string/numCuenta"
            android:text="6666666666"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTlfCli" />

        <EditText
            android:id="@+id/txtTlfCli"
            android:layout_width="214dp"
            android:layout_height="57dp"
            android:layout_marginTop="34dp"
            android:layout_marginEnd="28dp"
            android:hint="Teléfono"
            android:text="777777777"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtNombreCli" />

        <TextView
            android:id="@+id/textView4Cli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="76dp"
            android:text="Teléfono"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5Cli" />

        <TextView
            android:id="@+id/textView5Cli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="71dp"
            android:text="@string/nombre"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2Cli" />

        <TextView
            android:id="@+id/textView6Cli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="59dp"
            android:text="@string/cuenta"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4Cli" />

        <ImageButton
            android:id="@+id/btnImagenCli"
            android:layout_width="62dp"
            android:layout_height="53dp"
            android:contentDescription="Ajustes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
